; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/mthca/extr_mthca_cq.c_next_cqe_sw.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/mthca/extr_mthca_cq.c_next_cqe_sw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mthca_cqe = type { i32 }
%struct.mthca_cq = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.mthca_cqe* (%struct.mthca_cq*)* @next_cqe_sw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.mthca_cqe* @next_cqe_sw(%struct.mthca_cq* %0) #0 {
  %2 = alloca %struct.mthca_cq*, align 8
  store %struct.mthca_cq* %0, %struct.mthca_cq** %2, align 8
  %3 = load %struct.mthca_cq*, %struct.mthca_cq** %2, align 8
  %4 = load %struct.mthca_cq*, %struct.mthca_cq** %2, align 8
  %5 = getelementptr inbounds %struct.mthca_cq, %struct.mthca_cq* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = load %struct.mthca_cq*, %struct.mthca_cq** %2, align 8
  %8 = getelementptr inbounds %struct.mthca_cq, %struct.mthca_cq* %7, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = and i32 %6, %10
  %12 = call i32 @get_cqe(%struct.mthca_cq* %3, i32 %11)
  %13 = call %struct.mthca_cqe* @cqe_sw(i32 %12)
  ret %struct.mthca_cqe* %13
}

declare dso_local %struct.mthca_cqe* @cqe_sw(i32) #1

declare dso_local i32 @get_cqe(%struct.mthca_cq*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
